# ink-python

./: LAYOUT_ANALYSIS.md  LICENSE  README.md  pyproject.toml
.trellis/spec/frontend/: state-management.md
.trellis/tasks/06-19-pyink-mvp/: prd.md
.trellis/tasks/06-20-pyink-examples-mvp-fits/: prd.md
.trellis/tasks/06-20-pyink-phase4/: prd.md  task.json
.trellis/tasks/06-21-textinput-cursor-fixes/: task.json
.trellis/tasks/06-22-layout-hardening/: prd.md  task.json
.trellis/tasks/06-22-pyink-phase5/: task.json
.trellis/tasks/06-22-render-clamp-terminal/: task.json
.trellis/tasks/06-23-maxheight-semantics/: task.json
.trellis/tasks/06-23-rename-to-ink/: task.json
.trellis/workspace/116205035/: index.md  journal-1.md
docs/: api-reference.md  architecture.md  design-decisions.md  layout-audit.md  migration-from-textual.md
examples/: _debug_overflow.py  _debug_overflow_out.txt  _probe_out.txt
examples/alternate-screen/: alternate_screen.py
examples/ansi-colors/: ansi_colors.py
examples/big-text/: big_text_demo.py
examples/borders/: borders.py
examples/computed-batch/: computed_batch.py
examples/confirm-input/: confirm_demo.py
examples/counter/: counter.py
examples/debug-input/: debug_input.py
examples/diff/: diff_demo.py
examples/divider/: divider_demo.py
examples/gradient/: gradient_demo.py
examples/highlighted-code/: highlighted_code_demo.py
examples/link/: link_demo.py
examples/markdown/: markdown_demo.py
examples/markdown-streaming/: markdown_streaming_demo.py
examples/measure-element/: measure_demo.py
examples/nested-layout/: nested_layout.py
examples/progress-bar/: progress_bar_demo.py
examples/scroll-text/: scroll_text_demo.py
examples/select-input/: select_input.py
examples/select-input-multi/: multi_select_demo.py
examples/select-input-real/: select_input_demo.py
examples/spinner/: spinner_demo.py
examples/static/: static.py
examples/streaming-text/: streaming_text_demo.py
examples/table/: table_demo.py
examples/task-list/: task_list_demo.py
examples/text-input/: text_input_demo.py
examples/text-input-selection/: selection_demo.py
examples/transform/: transform_demo.py
examples/use-focus/: use_focus_demo.py
examples/use-focus-real/: use_focus_real_demo.py
examples/use-input/: use_input_demo.py
examples/use-window-size/: use_window_size.py
examples/virtual-list/: virtual_list_demo.py
examples/virtual-list-dynamic/: dynamic_demo.py
src/ink/: __init__.py
src/ink/components/: __init__.py  box.py  box.pyi  newline.py  newline.pyi  spacer.py  spacer.pyi  static.py  static.pyi  text.py  text.pyi  transform.py  transform.pyi
src/ink/core/: __init__.py  component.py  (+4 more)
src/pyink/: __init__.py
tests/: test_examples.py
tests/components/: test_box.py  test_newline.py  test_reactive_props.py  test_spacer.py  test_static.py  test_text.py  test_transform.py
tests/core/: test_context.py  test_reconciler.py  test_render.py  test_signal.py
tests/hooks/: __init__.py  test_box_metrics.py  test_focus.py  test_use_app.py  test_use_input.py  test_use_interval.py  test_use_window_size.py
tests/layout/: test_clip.py  test_flex.py  test_measure.py
tests/render/: test_alternate_screen.py  test_ansi.py  test_clamp.py  test_diff.py  test_instance.py  test_integration.py  test_key_parser.py  test_pipeline.py  test_raw_mode.py  test_terminal.py  test_utf8_input.py
(+82 files in other folders)
