[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyink"
version = "0.1.0"
description = "Python ink-style TUI framework built on signals"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "PyInk" }]
keywords = ["tui", "terminal", "cli", "signals", "reactive"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Terminals :: Terminal Emulators/X Terminals",
]
dependencies = ["wcwidth>=0.2.0"]

[project.optional-dependencies]
highlight = ["pygments>=2.14"]
markdown = ["markdown-it-py>=3.0"]
all = ["pyink[highlight,markdown]"]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "mypy",
    "types-Pygments",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pyink"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]

[tool.mypy]
strict = true
files = ["src/pyink", "tests", "examples"]
python_version = "3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
